--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,25 +1,6 @@
-// defining variables for sass
-
-// one line comment
-
-/*this is a multi line 
-comment*/
-
-/*VARIABLES*/
-
-$primary-color:#bada55;
-$font-size1: 3.125em;
-$font-size2: 2.125em;
-$text-color1:#f0f;
-
-/*aBASE STYLES*/
-body{
-    background-color: $primary-color;
-    h1{
-        font-size: $font-size1;
-    }
-    p{
-        font-size:$font-size2;
-        color: $text-color1;
-    }
-}
+// Global imports
+// ==================
+@import 'partials/variables';
+@import 'partials/base';
+@import 'partials/responsive';
+@import 'partials/components';
