--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -15,7 +15,7 @@ $text-color1:#f0f;
 
 /*aBASE STYLES*/
 body{
-    background-color: $primary-color;
+    // background-color: $primary-color;
     h1{
         font-size: $font-size1;
     }
