--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -8,20 +8,11 @@ comment*/
 
 /*VARIABLES*/
 
-$primary-color:#bada55;
+// $primary-color:#DECBB7;
 $font-size1: 3.125em;
 $font-size2: 2.125em;
-$text-color1:#f0f;
+$text-color1:#FF2E24; 
+$achor-color:#5bba94;
 
-/*aBASE STYLES*/
-body{
-    // background-color: $primary-color;
-    h1{
-        font-size: $font-size1;
-    }
-    p{
-        font-size:$font-size2;
-        color: $text-color1;
-    }
-}
+
 
