--- a/scss/partials/_components.scss
+++ b/scss/partials/_components.scss
@@ -1,3 +1,7 @@
+// buttons.images.icons
+
+
+
 .everything { 
     background-image: url('../img/forest_glowjpg.jpg'); 
     -webkit-background-size: cover;
