--- a/scss/partials/_variables.scss
+++ b/scss/partials/_variables.scss
@@ -13,6 +13,7 @@ $font-size1: 3.125em;
 $font-size2: 2.125em;
 $text-color1:#FF2E24; 
 $achor-color:#5bba94;
+$paragraph1-color:rgb(255, 255, 255);
 
 
 
